--- a/css/style.css
+++ b/css/style.css
@@ -52,9 +52,16 @@ a {
     color: #333333;
 }
 
+
 .wrapper {
 	margin:0 auto;
-	max-width: 960px; 
+	max-width: 1200px;
+}
+
+#fullcontent {
+    margin:0 auto;
+    max-width: 1150px;
+
 }
 
 .clear {
@@ -63,13 +70,16 @@ a {
 
 /*	HEADER  */
 .header-in {
+    display: flex;
+    justify-content: center;
     background: #7ba33b;
-    height: 100px;
+    height: 100px;  
 }
+
 
 .logo {
     float: left;
-    margin-left: 65px;
+    margin-left: -60px;
 }
 
 .menu1 {
@@ -123,14 +133,15 @@ a {
 }
 
 /*	CONTENT LEFT    */
+
 .cont-left-in{
     min-height: 400px;
-    margin: 40px 50px 50px 80px;
+    margin: 40px 10px 50px 0px;
 }
 
 .cont-left-in-shop{
     min-height: 400px;
-    margin: 40px 10px 50px 80px;
+    margin: 40px 0px 50px 0px;
 }
 
 /*	CONTENT RIGHT    */
@@ -138,7 +149,7 @@ a {
     background: #f5f5f5;
     min-height:250px;
     padding: 20px;
-    margin: 10px 10px 20px 20px;
+    margin: 10px 10px 20px 10px;
 }
 
 /*	FOOTER   */
@@ -148,7 +159,6 @@ a {
     height: 100px;
     text-align: center;
     margin-bottom: -25px;
-
 }
 
 .footer-in p{
@@ -168,6 +178,10 @@ a {
     float: right;
     margin-left: 15px;
     margin-bottom: 25px;
+}
+
+.cont-left-in img{
+    max-width:100%;
 }
 
 /*  SHOP  */
@@ -233,7 +247,7 @@ textarea {
     color: #777;
     height: 34px;
     padding: 0px 5px;
-    font-size: 14px;
+    font-size: 12px;
     color: #555;
     vertical-align: middle;
     background-color: #fff;
@@ -243,7 +257,7 @@ textarea {
 }
 
 .right-textarea{
-    width: 230px;
+    width: 98%;
     height: 50px;
 }
 
@@ -277,4 +291,65 @@ textarea {
 
  .fl-ch-good {
 
+ }
+
+ /*     --- ADAPTIVE - RESPONSIVE ---     */
+
+ @media screen and (max-width: 1200px) {
+    .logo,
+    #fullcontent {
+        margin:0 2% 0 2%;
+    }
+
+    .menu1 {
+    float: left;
+    text-transform: capitalize;
+    font-size: 18px;
+    margin: 28px 0 0 1%;
+    padding: 0;
+    list-style-type: none;
+    }  
+ }
+
+
+@media screen and (max-width: 985px) {
+    .logo img {
+        height: 70%;
+    }
+
+    .logo  {
+        margin-top: 10px;
+    }
+
+    .col-9 {
+        width: 95% ; 
+    }
+
+    .col-3 {
+        width: 50% ; 
+    }
+    
+ }
+
+
+@media screen and (max-width: 815px) {
+    .menu1 {
+        display: none;
+        /* позже добавление кнопки моб. меню */
+    }
+    
+ }
+
+ @media screen and (max-width: 600px) {
+    .col-3 {
+        width: 60% ; 
+    }
+    
+ }
+
+ @media screen and (max-width: 400px) {
+    .col-3 {
+        width: 95% ; 
+    }
+    
  }
